# litestar-autowire

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  labeler.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: changelog.rst  conf.py  contribution-guide.rst  getting-started.rst  index.rst
docs/_static/: custom.css  versioning.js
litestar_autowire/: __init__.py  __metadata__.py  config.py  discovery.py  extensions.py  integrations.py  plugin.py
tests/: __init__.py  conftest.py
tests/unit/: test_autowire_plugin.py
tools/sphinx_ext/: pygments_styles.py
