[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{ name = "Cody Fincher", email = "cody@litestar.dev" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = ["litestar>=2.23.0"]
description = "Package-based route, listener, and task discovery for Litestar"
keywords = ["litestar", "plugin", "routing", "discovery", "dependency-injection"]
license = { text = "MIT" }
maintainers = [
    { name = "Litestar Developers", email = "hello@litestar.dev" },
    { name = "Cody Fincher", email = "cody@litestar.dev" },
]
name = "litestar-autowire"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
dishka = ["dishka>=1.6.0"]
queues = ["litestar-queues>=0.1.0"]

[project.urls]
Changelog = "https://cofin.github.io/litestar-autowire/latest/changelog"
Discord = "https://discord.gg/litestar"
Documentation = "https://cofin.github.io/litestar-autowire/latest/"
Funding = "https://github.com/sponsors/cofin"
Homepage = "https://cofin.github.io/litestar-autowire/latest/"
Issue = "https://github.com/cofin/litestar-autowire/issues/"
Source = "https://github.com/cofin/litestar-autowire"

[tool.hatch.build.targets.wheel]
packages = ["litestar_autowire"]

[dependency-groups]
build = ["build>=1.2.2", "bump-my-version>=1.2.0"]
dev = [
    { include-group = "build" },
    { include-group = "doc" },
    { include-group = "lint" },
    { include-group = "test" },
]
doc = [
    "sphinx>=8.0.0",
    "sphinx-autobuild>=2021.3.14",
    "shibuya",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.5.0",
]
lint = ["mypy>=1.13.0", "pre-commit>=3.5.0", "pyright>=1.1.386", "ruff>=0.7.1", "slotscheck>=0.16.5"]
test = [
    "dishka>=1.6.0",
    "httpx>=0.24.1",
    "litestar-queues>=0.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-sugar>=1.0.0",
]

[tool.bumpversion]
allow_dirty = true
commit = false
commit_args = "--no-verify"
current_version = "0.1.0"
ignore_missing_files = false
ignore_missing_version = false
message = "chore(release): bump to v{new_version}"
parse = """(?x)
    (?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)
    (-(?P<pre>alpha|beta|rc)\\.(?P<pre_n>\\d+))?
"""
regex = false
replace = "{new_version}"
search = "{current_version}"
serialize = ["{major}.{minor}.{patch}", "{major}.{minor}.{patch}-{pre}.{pre_n}"]
sign_tags = false
tag = false
tag_message = "chore(release): v{new_version}"
tag_name = "v{new_version}"

[tool.bumpversion.parts.pre]
first_value = "stable"
optional_value = "stable"
values = ["alpha", "beta", "rc", "stable"]

[tool.bumpversion.parts.pre_n]
first_value = "1"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
replace = 'version = "{new_version}"'
search = 'version = "{current_version}"'

[tool.ruff]
line-length = 120
src = ["litestar_autowire", "tests", "docs"]
target-version = "py310"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["ALL"]
ignore = [
    "ANN401",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "E501",
    "FBT",
    "ISC001",
    "PLR0913",
    "S101",
]
select = ["ALL"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["litestar_autowire", "tests"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["INP001"]
"tests/**/*.py" = ["ARG001", "PLR2004", "SLF001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.slotscheck]
strict-imports = false

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
python_version = "3.10"
show_column_numbers = true
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
follow_imports = "skip"
module = ["_pytest.*", "pytest.*", "sphinx.*"]

[[tool.mypy.overrides]]
disallow_untyped_decorators = false
module = ["tests.*"]

[tool.pyright]
include = ["litestar_autowire", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:.*without setting sync_to_thread is discouraged",
]
markers = [
    "unit: marks tests as unit tests",
]
minversion = "8.0"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*/.venv/*"]
source = ["litestar_autowire"]

[tool.coverage.report]
show_missing = true
skip_covered = false
skip_empty = true
